--- a/app/Resources/views/admin/login.html.twig
+++ b/app/Resources/views/admin/login.html.twig
@@ -1,12 +1,10 @@
-{% extends 'site/base.html.twig' %}
+{% extends 'admin/base.html.twig' %}
 
 {% block body %}
 
-    <h3>Área do Cliente</h3>
+    <h3>Admin Login</h3>
 
-    <br>
-
-    {{ form_start(form, { 'action': path('site_login_check') }) }}
+    {{ form_start(form, { 'action': path('admin_login_check') }) }}
 
     <div class="row">
         <div class="col-lg-12">
@@ -19,9 +17,9 @@
 
             <div class="row">
                 <div class="form-group col-md-6">
-                    <button class="btn btn-primary">{{ 'user.login.btns.login'|trans }}</button>
-                    <a class="pull-right" href="{{ path('site_resetting_request') }}">
-                        {{ 'user.login.links.forgot_password'|trans }}
+                    <button class="btn btn-primary">Login</button>
+                    <a class="pull-right" href="{{ path('admin_resetting_request') }}">
+                        Esqueci minha senha
                     </a>
                 </div>
             </div>
