--- a/app/Resources/views/admin/_partials/_sidebar.html.twig
+++ b/app/Resources/views/admin/_partials/_sidebar.html.twig
@@ -13,30 +13,22 @@
         <ul class="page-sidebar-menu  page-header-fixed " data-keep-expanded="false"
             data-auto-scroll="true" data-slide-speed="200">
             <li class="nav-item start ">
-                <a href="javascript:;" class="nav-link nav-toggle">
+                <a href="{{ path('admin_dashboard') }}" class="nav-link">
                     <i class="icon-home"></i>
                     <span class="title">Dashboard</span>
+                </a>
+            </li>
+            <li class="nav-item start ">
+                <a href="{{ path('admin_user_index') }}" class="nav-link nav-toggle">
+                    <i class="icon-user"></i>
+                    <span class="title">Usuários</span>
                     <span class="arrow"></span>
                 </a>
                 <ul class="sub-menu">
                     <li class="nav-item start ">
-                        <a href="index.html" class="nav-link ">
+                        <a href="{{ path('admin_user_new') }}" class="nav-link ">
                             <i class="icon-bar-chart"></i>
-                            <span class="title">Dashboard 1</span>
-                        </a>
-                    </li>
-                    <li class="nav-item start ">
-                        <a href="dashboard_2.html" class="nav-link ">
-                            <i class="icon-bulb"></i>
-                            <span class="title">Dashboard 2</span>
-                            <span class="badge badge-success">1</span>
-                        </a>
-                    </li>
-                    <li class="nav-item start ">
-                        <a href="dashboard_3.html" class="nav-link ">
-                            <i class="icon-graph"></i>
-                            <span class="title">Dashboard 3</span>
-                            <span class="badge badge-danger">5</span>
+                            <span class="title">Novo Usuário</span>
                         </a>
                     </li>
                 </ul>
@@ -46,3 +38,20 @@
     </div>
     <!-- END SIDEBAR -->
 </div>
+
+{#
+<li class="nav-item start ">
+    <a href="{{ path('admin_dashboard') }}" class="nav-link nav-toggle">
+        <i class="icon-home"></i>
+        <span class="title">Dashboard</span>
+        <span class="arrow"></span>
+    </a>
+    <ul class="sub-menu">
+        <li class="nav-item start ">
+            <a href="index.html" class="nav-link ">
+                <i class="icon-bar-chart"></i>
+                <span class="title">Dashboard 1</span>
+            </a>
+        </li>
+    </ul>
+</li>#}
