--- a/app/Resources/views/admin/_partials/_navbar.html.twig
+++ b/app/Resources/views/admin/_partials/_navbar.html.twig
@@ -29,6 +29,7 @@
                                 <span class="username username-hide-mobile">
                                     {{ app.user.fullName }}
                                 </span>
+                                <i class="fa fa-angle-down"></i>
                             </a>
                             <ul class="dropdown-menu dropdown-menu-default">
                                 <li><a href="{{ path('admin_change_password') }}">
