--- a/app/Resources/views/admin/_partials/_footer.html.twig
+++ b/app/Resources/views/admin/_partials/_footer.html.twig
@@ -1,12 +1,20 @@
-<!-- BEGIN FOOTER -->
-<div class="page-footer">
-    <div class="page-footer-inner"> 2015 &copy; Metronic by keenthemes.
-        <a href="http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes"
-           title="Purchase Metronic just for 27$ and get lifetime updates for free" target="_blank">Purchase
-            Metronic!</a>
+{% if visible is not defined %}{% set visible = 'footer' %}{% endif %}
+
+{% if visible == 'footer' %}
+    <!-- BEGIN FOOTER -->
+    <div class="page-footer">
+        <div class="page-footer-inner"> {{ "now"|date("Y") }} &copy; RC Info.
+            <a href="http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes"
+               title="Purchase Metronic just for 27$ and get lifetime updates for free" target="_blank">Purchase
+                Metronic!</a>
+        </div>
+        <div class="scroll-to-top">
+            <i class="icon-arrow-up"></i>
+        </div>
     </div>
-    <div class="scroll-to-top">
-        <i class="icon-arrow-up"></i>
-    </div>
-</div>
-<!-- END FOOTER -->
+    <!-- END FOOTER -->
+{% endif %}
+
+{% if visible == 'footer_security' %}
+    <div class="copyright"> {{ "now"|date("Y") }} &copy; RC Info.</div>
+{% endif %}
