--- a/app/Resources/views/admin/base.html.twig
+++ b/app/Resources/views/admin/base.html.twig
@@ -1,99 +1,58 @@
 <!DOCTYPE html>
-<html>
+<!--[if IE 8]>
+<html lang="en" class="ie8 no-js"> <![endif]-->
+<!--[if IE 9]>
+<html lang="en" class="ie9 no-js"> <![endif]-->
+<!--[if !IE]><!-->
+<html lang="en">
+<!--<![endif]-->
 <head>
     <meta charset="UTF-8"/>
     <title>{% block title %}Admin RC Info{% endblock %}</title>
 
     {% block stylesheets %}
-        <!-- BEGIN GLOBAL MANDATORY STYLES -->
-        <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet"
-              type="text/css"/>
-        <link href="{{ asset('bower_components/components-font-awesome/css/font-awesome.min.css') }}" rel="stylesheet"
-              type="text/css"/>
-        <link href="{{ asset('bower_components/simple-line-icons/css/simple-line-icons.css') }}" rel="stylesheet"
-              type="text/css"/>
-        <link href="{{ asset('bower_components/bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet"
-              type="text/css"/>
-        <link href="{{ asset('bower_components/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.min.css') }}"
-              rel="stylesheet" type="text/css"/>
-        <!-- END GLOBAL MANDATORY STYLES -->
-
-        <!-- BEGIN THEME GLOBAL STYLES -->
-        <link href="{{ asset('admin/assets/global/css/components-rounded.min.css') }}" rel="stylesheet" id="style_components"
-              type="text/css"/>
-        <link href="{{ asset('admin/assets/global/css/plugins.min.css') }}" rel="stylesheet" type="text/css"/>
-        <!-- END THEME GLOBAL STYLES -->
-
-        <!-- BEGIN THEME LAYOUT STYLES -->
-        <link href="{{ asset('admin/assets/layouts/layout2/css/layout.css') }}" rel="stylesheet" type="text/css"/>
-        <link href="{{ asset('admin/assets/layouts/layout2/css/themes/blue.min.css') }}" rel="stylesheet"
-              type="text/css" id="style_color"/>
-        <link href="{{ asset('admin/assets/layouts/layout2/css/custom.min.css') }}" rel="stylesheet" type="text/css"/>
-        <!-- END THEME LAYOUT STYLES -->
-
-        <link rel="stylesheet" href="{{ asset('admin/assets/global/css/admin_custom.css') }}">
-
+        {% embed 'admin/_partials/_block_stylesheets.html.twig' %}{% endembed %}
     {% endblock %}
 
     {#<link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}"/>#}
 </head>
 
-<body class="page-sidebar-closed-hide-logo page-container-bg-solid page-header-fixed page-sidebar-fixed {% block body_class %}{% endblock %}">
+{% block body %}
+    <body class="page-sidebar-closed-hide-logo page-container-bg-solid page-header-fixed page-sidebar-fixed {% block body_class %}{% endblock %}">
 
-{{ include('admin/_partials/_navbar.html.twig') }}
+    {% include('admin/_partials/_navbar.html.twig') %}
 
-<!-- BEGIN CONTAINER -->
-<div class="page-container">
-    <!-- BEGIN SIDEBAR -->
-    {{ include('admin/_partials/_sidebar.html.twig') }}
-    <!-- END SIDEBAR -->
-    <!-- BEGIN CONTENT -->
-    <div class="page-content-wrapper">
-        <!-- BEGIN CONTENT BODY -->
-        <!-- BEGIN PAGE HEAD-->
-        {% block page_header %}{% endblock %}
-        <!-- END PAGE HEAD-->
-        <!-- BEGIN PAGE CONTENT BODY -->
-        <div class="page-content">
-            {% block body %}{% endblock %}
+    <!-- BEGIN CONTAINER -->
+    <div class="page-container">
+        <!-- BEGIN SIDEBAR -->
+        {% include('admin/_partials/_sidebar.html.twig') %}
+        <!-- END SIDEBAR -->
+        <!-- BEGIN CONTENT -->
+        <div class="page-content-wrapper">
+            <!-- BEGIN CONTENT BODY -->
+            <!-- BEGIN PAGE HEAD-->
+            {% block page_header %}{% endblock %}
+            <!-- END PAGE HEAD-->
+            <!-- BEGIN PAGE CONTENT BODY -->
+            <div class="page-content">
+                {% block page_content %}{% endblock %}
+            </div>
+            <!-- END PAGE CONTENT BODY -->
+            <!-- END CONTENT BODY -->
         </div>
-        <!-- END PAGE CONTENT BODY -->
-        <!-- END CONTENT BODY -->
+        <!-- END CONTENT -->
     </div>
-    <!-- END CONTENT -->
-</div>
-<!-- END CONTAINER -->
+    <!-- END CONTAINER -->
 
-{{ include('admin/_partials/_footer.html.twig') }}
+    {% block footer %}
+        {% embed 'admin/_partials/_footer.html.twig' %}{% endembed %}
+    {% endblock %}
 
-{% block javascripts %}
-    <!-- BEGIN CORE PLUGINS -->
-    <!--[if lt IE 9]>
-    <script src="{{ asset('bower_components/respond/dest/respond.min.js') }}"></script>
-    <script src="{{ asset('bower_components/ExplorerCanvas/excanvas.js') }}"></script>
-    <![endif]-->
-    <script src="{{ asset('bower_components/jquery/dist/jquery.min.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('bower_components/bootstrap/dist/js/bootstrap.min.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('bower_components/bootstrap-hover-dropdown/bootstrap-hover-dropdown.min.js') }}"
-            type="text/javascript"></script>
-    <script src="{{ asset('bower_components/jquery-slimscroll/jquery.slimscroll.min.js') }}"
-            type="text/javascript"></script>
-    <script src="{{ asset('bower_components/blockUI/jquery.blockUI.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('bower_components/bootstrap-switch/dist/js/bootstrap-switch.min.js') }}"
-            type="text/javascript"></script>
-    <!-- END CORE PLUGINS -->
+    {% block javascripts %}
+        {% embed 'admin/_partials/_block_javascripts.html.twig' %}{% endembed %}
+    {% endblock %}
 
-    <!-- BEGIN THEME GLOBAL SCRIPTS -->
-    <script src="{{ asset('admin/assets/global/scripts/app.min.js') }}" type="text/javascript"></script>
-    <!-- END THEME GLOBAL SCRIPTS -->
-
-    <!-- BEGIN THEME LAYOUT SCRIPTS -->
-    <script src="{{ asset('admin/assets/layouts/layout2/scripts/layout.min.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('admin/assets/layouts/layout2/scripts/demo.min.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('admin/assets/layouts/global/scripts/quick-sidebar.min.js') }}"
-            type="text/javascript"></script>
-    <!-- END THEME LAYOUT SCRIPTS -->
+    </body>
 {% endblock %}
 
-</body>
 </html>
