--- a/app/Resources/views/admin/dashboard.html.twig
+++ b/app/Resources/views/admin/dashboard.html.twig
@@ -1,8 +1,10 @@
 {% extends 'admin/base.html.twig' %}
 
-{% block body %}
+{% block title %}{{ parent() }} - Dashboard{% endblock %}
 
-    {% include '_partials/_alerts.html.twig' %}
+{% block page_content %}
+
+    {% include '_partials/_flash_messages.html.twig' %}
 
     <h3>Admin Dashboard</h3>
 
