--- a/app/Resources/views/admin/_partials/_navbar.html.twig
+++ b/app/Resources/views/admin/_partials/_navbar.html.twig
@@ -5,7 +5,9 @@
         <!-- BEGIN LOGO -->
         <div class="page-logo">
             <a href="{{ path('admin_dashboard') }}">
-                <img src="{{ asset('admin/assets/layouts/layout2/img/logo-default.png') }}" alt="logo" class="logo-default"/> </a>
+                {#<img src="{{ asset('admin/assets/layouts/layout2/img/logo-default.png') }}" alt="logo" class="logo-default"/>#}
+                <h4 class="logo-default">RC INFO ADM</h4>
+            </a>
             <div class="menu-toggler sidebar-toggler">
                 <!-- DOC: Remove the above "hide" to enable the sidebar toggler button on header -->
             </div>
