--- a/app/Resources/views/admin/_partials/_footer.html.twig
+++ b/app/Resources/views/admin/_partials/_footer.html.twig
@@ -3,11 +3,7 @@
 {% if visible == 'footer' %}
     <!-- BEGIN FOOTER -->
     <div class="page-footer">
-        <div class="page-footer-inner"> {{ "now"|date("Y") }} &copy; RC Info.
-            <a href="http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes"
-               title="Purchase Metronic just for 27$ and get lifetime updates for free" target="_blank">Purchase
-                Metronic!</a>
-        </div>
+        <div class="page-footer-inner"> {{ "now"|date("Y") }} &copy; RC Info.</div>
         <div class="scroll-to-top">
             <i class="icon-arrow-up"></i>
         </div>
