--- a/app/Resources/views/admin/_form/_layout.html.twig
+++ b/app/Resources/views/admin/_form/_layout.html.twig
@@ -10,9 +10,7 @@
 {%- endblock form_row %}#}
 
 {% block form_row -%}
-
     {% if fh_col_md is defined %}
-
         <div class="form-group {% if (not compound or force_error|default(false)) and not valid %}has-error{% endif %}">
             {{- form_label(form) -}}
             <div class="{{ fh_col_md }}">
@@ -29,3 +27,18 @@
     {% endif %}
 
 {%- endblock form_row %}
+
+{%- block button_widget -%}
+    {% set attr = attr|merge({class: (attr.class|default('btn-default') ~ ' btn')|trim}) %}
+    {%- if label is empty -%}
+        {%- if label_format is not empty -%}
+            {% set label = label_format|replace({
+            '%name%': name,
+            '%id%': id,
+            }) %}
+        {%- else -%}
+            {% set label = name|humanize %}
+        {%- endif -%}
+    {%- endif -%}
+    <button type="{{ type|default('button') }}" {{ block('button_attributes') }}>{{ icon|default('')|raw }} {{ translation_domain is same as(false) ? label : label|trans({}, translation_domain) }}</button>
+{%- endblock button_widget -%}
